rnsc/test_data/rns_integration/error/parser/instructions/ldc_identifier_without_th.rns
.class LdcIdentifierWithoutTh
.super java/lang/Object

.method static main ([Ljava/lang/String;)V
  .code stack 2 locals 1
    ldc "Hello World!"
    return
  .code_end
.method_end
